examples/test/testpolicy6982.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6982
  namespace: namespace112
spec:
  podSelector:
    matchLabels:
      key42: value24
      key29: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value18
          key7: value42
      podSelector:
        matchLabels:
          key45: value4
          key13: value44
